--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 python = "^3.11"
 torch = "^2.4.1"
 numpy = "^2.1.2"
+torchao = "^0.5.0"
+torchtune = "^0.3.1"
 
 
 [tool.poetry.group.dev.dependencies]
