--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,10 @@ torch = "^2.4.1"
 numpy = "^2.1.2"
 torchao = "^0.5.0"
 torchtune = "^0.3.1"
+tokenizers = "0.19.1"
+transformers = "4.40.0"
+peft = "0.10.0"
+accelerate = "0.29.3"
 
 
 [tool.poetry.group.dev.dependencies]
